# reversing-bonsai

./: .gitignore  CLAUDE.md  FINDINGS.md  GLOSSARY.md  HANDOFF.md  LICENSE  README.md  RECIPE_HINTS.md  SUMMARY.md  TERMS_EXPANDED.txt  VM_NOTES.md  pyproject.toml  recipes_00_lora_qat_cloud.md  recipes_01_obc_sequential_mac.md
.claude/: settings.json
agent_prompts/: EVAL_AGENT.md  RECREATION_AGENT.md
prebuilt/: README.md
reports/: ASSUMPTIONS_AUDIT.md  CROSS_SIZE_AUDIT_SYNTHESIS.md  CROSS_SIZE_SYNTHESIS.md  EVAL_REPLICABILITY.md  HASSIBI_LINF_RECIPE_NOTE.md  HYPOTHESIS_SPACE.md  PER_TENSOR_TYPE_FINGERPRINT.md  PRIOR_ART_VERDICT_MATRIX.md  RELATED_RESEARCH.md  REPRODUCTION_SKELETON.md
scripts/: asciitable.py  attn_svd_l1l3.py  build_llama_cpp.sh  cross_tensor_overdisp.py  depth_overdisp_1.7B.py  depth_overdisp_sweep.py  depth_svd_mlp.py  fetch_models_from_release.sh  independent_verify.py  inference_smoke_test.sh  lora_rank_simulation.py  merge_shards.py  per_head_scale_8B.py  run_all_on_trio.sh  run_local_analysis.sh  scale_autocorrelation.py  streaming_formula_audit.py  teacher_block_mag_heterogeneity.py  teacher_sign_blockstruct.py  verify_recipe_v4.py
src/: analyze_q1_0.py  compare_magnitudes.py  compare_q1_dequant_vs_unpacked.py  compare_unpacked.py  compare_unpacked_vs_qwen3.py  deep_dive.py  dequantize_gguf_to_safetensors.py  gguf_inspect.py  joint_permutation_search.py  make_cross_size_plots.py  make_mini_report_figures.py  per_head_sign_flips.py  ptq_baseline.py  ptq_baseline_v2.py  q1_0.py  q1_0_bitlinear_poc.py  qat_toy_demo.py  sign_disagreement.py  (+2 more)
(+111 files in other folders)
