[project]
name = "reversing-bonsai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gguf>=0.19.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=1.14.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "torch>=2.11.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
